cvs/src/gnu/llvm/tools/clang/docs/ClangCheck.rst,v
head	1.1;
branch	1.1.1;
access;
symbols
	LLVM_5_0_0:1.1.1.2
	OPENBSD_6_2:1.1.1.2.0.2
	OPENBSD_6_2_BASE:1.1.1.2
	OPENBSD_6_1:1.1.1.2.0.4
	OPENBSD_6_1_BASE:1.1.1.2
	LLVM_4_0_0:1.1.1.2
	LLVM_4_0_0_RC1:1.1.1.2
	LLVM_3_9_1:1.1.1.1
	LLVM_3_8_1:1.1.1.1
	LLVM:1.1.1;
locks; strict;
comment	@# @;


1.1
date	2016.09.03.22.46.56;	author pascal;	state Exp;
branches
	1.1.1.1;
next	;
commitid	piLU3CHugy63NlaI;

1.1.1.1
date	2016.09.03.22.46.56;	author pascal;	state Exp;
branches;
next	1.1.1.2;
commitid	piLU3CHugy63NlaI;

1.1.1.2
date	2017.01.24.08.33.06;	author patrick;	state Exp;
branches;
next	;
commitid	so2WA7LCP6wbxtYl;


desc
@@


1.1
log
@Initial revision
@
text
@==========
ClangCheck
==========

`ClangCheck` is a small wrapper around :doc:`LibTooling` which can be used to
do basic error checking and AST dumping.

.. code-block:: console

  $ cat <<EOF > snippet.cc
  > void f() {
  >   int a = 0
  > }
  > EOF
  $ ~/clang/build/bin/clang-check snippet.cc -ast-dump --
  Processing: /Users/danieljasper/clang/llvm/tools/clang/docs/snippet.cc.
  /Users/danieljasper/clang/llvm/tools/clang/docs/snippet.cc:2:12: error: expected ';' at end of
        declaration
    int a = 0
             ^
             ;
  (TranslationUnitDecl 0x7ff3a3029ed0 <<invalid sloc>>
    (TypedefDecl 0x7ff3a302a410 <<invalid sloc>> __int128_t '__int128')
    (TypedefDecl 0x7ff3a302a470 <<invalid sloc>> __uint128_t 'unsigned __int128')
    (TypedefDecl 0x7ff3a302a830 <<invalid sloc>> __builtin_va_list '__va_list_tag [1]')
    (FunctionDecl 0x7ff3a302a8d0 </Users/danieljasper/clang/llvm/tools/clang/docs/snippet.cc:1:1, line:3:1> f 'void (void)'
      (CompoundStmt 0x7ff3a302aa10 <line:1:10, line:3:1>
        (DeclStmt 0x7ff3a302a9f8 <line:2:3, line:3:1>
          (VarDecl 0x7ff3a302a980 <line:2:3, col:11> a 'int'
            (IntegerLiteral 0x7ff3a302a9d8 <col:11> 'int' 0))))))
  1 error generated.
  Error while processing snippet.cc.

The '--' at the end is important as it prevents `clang-check` from search for a
compilation database. For more information on how to setup and use `clang-check`
in a project, see :doc:`HowToSetupToolingForLLVM`.
@


1.1.1.1
log
@Use the space freed up by sparc and zaurus to import LLVM.

ok hackroom@@
@
text
@@


1.1.1.2
log
@Import LLVM 4.0.0 rc1 including clang and lld to help the current
development effort on OpenBSD/arm64.
@
text
@d34 3
a36 3
The '--' at the end is important as it prevents :program:`clang-check` from
searching for a compilation database. For more information on how to setup and
use :program:`clang-check` in a project, see :doc:`HowToSetupToolingForLLVM`.
@

